[Refactor] Moved navbar template to separate file

--- a/bartczak_tech/templates/base.html
+++ b/bartczak_tech/templates/base.html
@@ -31,6 +31,7 @@
     {% endblock javascript %}
   </head>
   <body class="{% block bodyclass %}{% endblock bodyclass %}">
+    {% include 'portfolio/navbar.html' %}
     {% block body %}
     {% endblock body %}
     {% block inline_javascript %}
