--- a/bartczak_tech/templates/portfolio/portfolio.html
+++ b/bartczak_tech/templates/portfolio/portfolio.html
@@ -25,49 +25,7 @@
         </div>
       </section>
       <!-- //HOME -->
-      <!-- SERVICES -->
-      <section id="services" class="full-height px-lg-5">
-        <div class="container">
-          <div class="row pb-4" data-aos="fade-up">
-            <div class="col-lg-8">
-              <h6 class="text-brand">HOBBIES</h6>
-              <h1>What are my passions?</h1>
-            </div>
-          </div>
-          <div class="row gy-4">
-            <div class="col-md-4" data-aos="fade-up">
-              <div class="service p-4 bg-base rounded-4 shadow-effect">
-                <div class="iconbox rounded-4">
-                  <i class="las la-laptop-code"></i>
-                </div>
-                <h5 class="mt-4 mb-2">Software Development</h5>
-                <p>I create Python applications for my personal use and learning coding teamwork</p>
-                <a href="#" class="link-custom">Read More</a>
-              </div>
-            </div>
-            <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-              <div class="service p-4 bg-base rounded-4 shadow-effect">
-                <div class="iconbox rounded-4">
-                  <i class="las la-camera"></i>
-                </div>
-                <h5 class="mt-4 mb-2">Photography</h5>
-                <p>I enjoy sharing my view on the world using lens eye</p>
-                <a href="#" class="link-custom">Read More</a>
-              </div>
-            </div>
-            <div class="col-md-4" data-aos="fade-up" data-aos-delay="600">
-              <div class="service p-4 bg-base rounded-4 shadow-effect">
-                <div class="iconbox rounded-4">
-                  <i class="las la-guitar"></i>
-                </div>
-                <h5 class="mt-4 mb-2">Music</h5>
-                <p>I"m doing first steps with creating music on bass guitar</p>
-                <a href="#" class="link-custom">Read More</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      {% include 'portfolio/hobbies.html' with hobbies=hobbies_list %}
       <!-- SERVICES -->
       <!-- WORK -->
       <section id="work" class="full-height px-lg-5">
