--- a/bartczak_tech/templates/portfolio/hobbies.html
+++ b/bartczak_tech/templates/portfolio/hobbies.html
@@ -14,7 +14,7 @@
           <div class="col-md-4" data-aos="fade-up">
             <div class="service p-4 bg-base rounded-4 shadow-effect">
               <div class="iconbox rounded-4">
-                <i class="las la-laptop-code"></i>
+                <i class="{{ hobby.icon }}"></i>
               </div>
               <h5 class="mt-4 mb-2">{{ hobby.name }}</h5>
               <p>{{ hobby.description }}</p>
