Added displaying project details

--- a/bartczak_tech/templates/base.html
+++ b/bartczak_tech/templates/base.html
@@ -28,6 +28,8 @@
       <script defer src="{% static 'js/main.js' %}"></script>
       <script src="{% static 'js/aos.js' %}"></script>
       <script src="{% static 'js/bootstrap_bundle.min.js' %}"></script>
+      <script src="{% static 'js/bootstrap.min.js' %}"></script>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     {% endblock javascript %}
   </head>
   <body class="{% block bodyclass %}{% endblock bodyclass %}">
