--- a/bartczak_tech/templates/portfolio/hobbies.html
+++ b/bartczak_tech/templates/portfolio/hobbies.html
@@ -1,7 +1,7 @@
 {% load static i18n %}
 
 {% if hobbies %}
-  <section id="services" class="full-height px-lg-5">
+  <section id="hobbies" class="full-height px-lg-5">
     <div class="container">
       <div class="row pb-4" data-aos="fade-up">
         <div class="col-lg-8">
