--- a/bartczak_tech/templates/portfolio/navbar.html
+++ b/bartczak_tech/templates/portfolio/navbar.html
@@ -23,10 +23,10 @@
           <a class="nav-link" href="#home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#services">Hobbies</a>
+          <a class="nav-link" href="#hobbies">Hobbies</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#work">Work</a>
+          <a class="nav-link" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#blog">Blog</a>
