--- a/bartczak_tech/templates/portfolio/projects.html
+++ b/bartczak_tech/templates/portfolio/projects.html
@@ -20,6 +20,7 @@
                        alt="Image showing {{ project.name }}" />
                 {% else %}
                   <img class="rounded-4"
+                       loading="lazy"
                        src="{% static 'images/project-default-photo.png' %}"
                        alt="Image showing {{ project.name }}" />
                 {% endif %}
