--- a/bartczak_tech/templates/portfolio/blog.html
+++ b/bartczak_tech/templates/portfolio/blog.html
@@ -10,7 +10,7 @@
       <div class="col-md-4" data-aos="fade-up">
         <div class="card-custom rounded-4 bg-base shadow-effect">
           <div class="card-custom-image rounded-4">
-            <img class="rounded-4" src="{% static 'images/blog-post-1.jpg' %}" alt="" />
+            <img class="rounded-4" src="{% static 'images/blog-post-1.jpg' %}" alt="Blog post thumbnail image" />
           </div>
           <div class="card-custom-content p-4">
             <p class="text-brand mb-2">20 Dec, 2022</p>
