--- a/bartczak_tech/templates/portfolio/navbar.html
+++ b/bartczak_tech/templates/portfolio/navbar.html
@@ -28,9 +28,10 @@
         <li class="nav-item">
           <a class="nav-link" href="#projects">Projects</a>
         </li>
-        <li class="nav-item">
+        <!-- TODO: Uncomment blog link once work on blog will be completed -->
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#blog">Blog</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a>
         </li>
