--- a/bartczak_tech/templates/portfolio/navbar.html
+++ b/bartczak_tech/templates/portfolio/navbar.html
@@ -31,9 +31,12 @@
         <li class="nav-item">
           <a class="nav-link" href="#blog">Blog</a>
         </li>
-        <li class="nav-item">
+        <!-- TODO: Add contact link when completed -->
+        <!--
+         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a>
         </li>
+         -->
       </ul>
     </div>
   </div>
