--- a/bartczak_tech/templates/portfolio/portfolio.html
+++ b/bartczak_tech/templates/portfolio/portfolio.html
@@ -8,7 +8,10 @@
       {% include 'portfolio/header.html' %}
       {% include 'portfolio/hobbies.html' with hobbies=hobbies_list %}
       {% include 'portfolio/projects.html' with projects=projects_list %}
-      <!-- TODO: Include blog when completed -->
+      {% comment %}
+      Blog section will be included here when completed.
+      Tracked in issue #XX on project management tool.
+      {% endcomment %}
       <!-- TODO: Include contact when completed -->
       {% include 'portfolio/footer.html' %}
     </div>
