--- a/bartczak_tech/templates/base.html
+++ b/bartczak_tech/templates/base.html
@@ -44,6 +44,64 @@
           });
         </script>
       {% endcomment %}
+      <script>
+        document.addEventListener("DOMContentLoaded", function() {
+          const projectLinks = document.querySelectorAll(".link-custom");
+          const modal = new bootstrap.Modal(document.getElementById("projectModal"));
+          const modalProjectImage = document.getElementById("modalProjectImage");
+          const modalProjectName = document.getElementById("modalProjectName");
+          const modalProjectDescription = document.getElementById("modalProjectDescription");
+          const modalProjectTechnologies = document.getElementById("modalProjectTechnologies");
+          const modalProjectLinks = document.getElementById("modalProjectLinks"); // Add this line
+
+          projectLinks.forEach((link) => {
+            link.addEventListener("click", function(event) {
+              event.preventDefault();
+              const {
+                projectId
+              } = this.dataset;
+
+              fetch(`/project/${projectId}/`)
+                .then((response) => response.json())
+                .then((data) => {
+                  modalProjectImage.src = data.image_url;
+                  modalProjectName.textContent = data.name;
+                  modalProjectDescription.textContent = data.description;
+
+                  // Clear previous technologies
+                  modalProjectTechnologies.innerHTML = "";
+                  data.technologies.forEach((tech) => {
+                    const li = document.createElement("li");
+                    li.textContent = tech;
+                    modalProjectTechnologies.appendChild(li);
+                  });
+
+                  // Add project links
+                  modalProjectLinks.innerHTML = "";
+                  if (data.github_link) {
+                    const githubLink = document.createElement("a");
+                    githubLink.href = data.github_link;
+                    githubLink.textContent = "GitHub";
+                    githubLink.target = "_blank";
+                    modalProjectLinks.appendChild(githubLink);
+                  }
+                  if (data.project_link) {
+                    const projectLink = document.createElement("a");
+                    projectLink.href = data.project_link;
+                    projectLink.textContent = data.project_link_text || "Project";
+                    projectLink.target = "_blank";
+                    if (modalProjectLinks.innerHTML) {
+                      modalProjectLinks.innerHTML += " | ";
+                    }
+                    modalProjectLinks.appendChild(projectLink);
+                  }
+
+                  modal.show();
+                });
+            });
+          });
+        });
+      </script>
     {% endblock inline_javascript %}
   </body>
 </html>
