--- a/bartczak_tech/templates/base.html
+++ b/bartczak_tech/templates/base.html
@@ -28,7 +28,7 @@
       <script defer src="{% static 'js/main.js' %}"></script>
       <script src="{% static 'js/aos.js' %}"></script>
       <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-      <script src="{% static 'js/bootstrap.min.js' %}"></script>
+      <script src="{% static 'js/bootstrap_min.js' %}"></script>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     {% endblock javascript %}
   </head>
